enabled some test cases again.